fixed overflow issue, yay

--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -40,7 +40,6 @@ font-style: normal;
 } 
 
 html {
-  width: 100vw;
   font-size: 18px;
   font-family: sofia-pro, sans-serif;
   font-weight: 300;
@@ -75,7 +74,6 @@ h2 {
 }
 
 .main {
-	width:100vw;
   max-width: 1150px;
   margin: auto;
   position: relative;
@@ -104,7 +102,7 @@ h2 {
 	margin: 0;
 	position: absolute;
 	top:380px;
-	left:0;
+	left:10px;
 	font-size: 80px;
   -webkit-transform-origin: 0 0;
   -moz-transform-origin:    0 0;
@@ -125,7 +123,7 @@ h2 {
 	margin: 0;
 	position: absolute;
 	top:300px;
-	left:60px;
+	left:65px;
 	font-size: 80px;
   -webkit-transform-origin: 0 0;
   -moz-transform-origin:    0 0;
@@ -164,7 +162,6 @@ h2 {
 }
 
 .topMain {
-  width:100vw;
   max-width: 1150px;
   margin: auto;
   position: relative;
@@ -210,7 +207,6 @@ h2 {
 	background-color: #E8E8E8;
 	display: flex;
 	flex-direction: column;
-	width:100vw;
   max-width: 1150px;
   margin: auto;
 }
